Add Drawing options - doesn't save drawing

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html >
 <head>
+<script src="Cesium/Cesium.js"></script>
+<script src="cesiumDrawHelper.patcher.js"></script>
     <title>React Cesium</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
 </body>
 </html>
